--- a/style/style.css
+++ b/style/style.css
@@ -450,15 +450,25 @@ body .input-group-text{
     border-top: 1px solid #ddd;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-end;
     gap: 10px;
+}
+
+.summary-sec{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
 }
 
 .cart-total {
     display: flex;
-    justify-content: space-around;
-    gap: 30px;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
 }
 
 .cart-total span{
@@ -469,7 +479,8 @@ body .input-group-text{
 .cart-total em{
     font-size: 15px;
     font-weight: 500;
-    color: #ccc;
+    color: #717171;
+    font-style: normal;
 }
 
 .checkout-btn {
@@ -573,98 +584,6 @@ body .input-group-text{
     object-fit: cover;
     border-radius: 4px;
 }
-/*backoffice*/
-tr td i{
-    color: yellowgreen;
-}
-body.office{
-    main{
-        height: 100%;
-        display: block;
-    }
-}
-.backoffice{
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    width: 90%;
-    margin: 50px auto;
-}
-.backoffice header{
-    width: 100%;
-    position: relative;
-    
-}
-.backoffice .header-content{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 20px;
-    position: fixed;
-    z-index: 1111;
-    background: #fff;
-    box-shadow: 0px 0px 5px 1px darkgray;
-    width: 90%;
-    border-radius: .5rem;
-    padding: 15px;
-}
-.backoffice .header-content a.back{
-    width: 180px;
-    margin-right: 100px;
-}
-.backoffice .dropmenu-content{
-    position:  absolute;
-    top: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    min-width: 280px;
-    max-width: 310px;
-    height: 0;
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    background-color: #fff;
-    z-index: 111;
-    opacity: 0;
-    transition: all 700ms ease-in-out;
-    padding: 15px;
-    gap: 10px;
-}
-.openSubNav{
-    opacity: 1 !important;
-    height: max-content !important;
-}
-.backoffice header nav{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-.backoffice header nav .link{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    padding: 10px 20px 10px;
-    color:gray;
-    cursor: pointer;
-    position: relative;
-}
-.backoffice header nav .link.active{
-    background-color: aliceblue;
-    color:#2175FF;
-}
-.backoffice header nav .link i{
-    margin: 0 10px 0 0;
-    color: yellowgreen;
-}
-
-.backoffice .content{
-    width: 75%;
-    margin: 30px auto;
-    min-width: 290px;
-    margin: 110px auto 30px;
-}
 #formFile{
     line-height: 2.5;
     padding: 0.075rem .75rem;
@@ -727,25 +646,6 @@ body.office{
 .categ .bloc-content .item-link i{
     color: #fff;
     font-size: 1em;
-}
-a.back{
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    border: 1px solid yellowgreen;
-    padding: 10px 0;
-    justify-content: center;
-    width: 20%;
-    border-radius: 5px;
-    color: yellowgreen;
-}
-a.back i{
-    font-size: 1.5em;
-    margin-right: 10px;
-    color: yellowgreen;
-}
-.categ .categ-content,.product-content{
-    margin-top: 20px;
 }
 /*product styling*/
 .card{
